Added another section in settings

--- a/etc/options.html
+++ b/etc/options.html
@@ -135,7 +135,7 @@
 		</style>
 
 		<header>
-			<h1 class="pull-left">Options <span>Courses<strong>Plus</strong></span></h1> <div class="pull-right"><a href="https://courses.dalton.org">Go to Courses &raquo;</a></div>
+			<h2 class="pull-left">Options <span>Courses<strong>Plus</strong></span></h1> <div class="pull-right"><a href="https://courses.dalton.org">Go to Courses &raquo;</a></div><br>
 		</header>
 
 		<section id="left-pane">
@@ -159,6 +159,10 @@
 				<li data-page="privacy">
 					<div class="section-name">Privacy</div>
 					<div class="section-desc">Manage Courses<strong>Plus</strong>'s anonymous analytics</div>
+				</li>
+				<li data-page="profile">
+					<div class="section-name">Profile Settings</div>
+					<div class="section-desc">Manage Courses's profile settings.</div>
 				</li>
 				<li data-page="about">
 					<div class="section-name">About</div>
@@ -301,6 +305,11 @@
 					<li><a href="http://getbootstrap.com/">Twitter Bootstrap</a></li>
 					<li><a href="https://github.com/snaptortoise/konami-js">Konami.js</a></li>
 				</ul>
+			</section>
+			<section id="profile" class="page">
+				<p>Courses has a profile settings page. Press the below button to access it.</p><br>
+				<a href="https://courses2015.dalton.org/user/edit.php?id=1194&course=1" class="btn btn-primary">Dalton Courses External Settings. (This will leave the current page.)</a>
+
 			</section>
 		</section>
 	</body>
