--- a/etc/options.html
+++ b/etc/options.html
@@ -304,6 +304,7 @@
 					<li><a href="https://jqueryui.com/">jQuery UI</a></li>
 					<li><a href="http://getbootstrap.com/">Twitter Bootstrap</a></li>
 					<li><a href="https://github.com/snaptortoise/konami-js">Konami.js</a></li>
+					<li><a href="http://bootswatch.com">Bootswatch</a></li>
 				</ul>
 			</section>
 			<section id="profile" class="page">
