Changes Page Options to Appearance (settings)

--- a/etc/options.html
+++ b/etc/options.html
@@ -141,8 +141,8 @@
 		<section id="left-pane">
 			<ul id="pagelist">
 				<li data-page="page-options">
-					<div class="section-name">Page options</div>
-					<div class="section-desc">Change options for different pages. <em>Example: backgrounds and colors.</em></div>
+					<div class="section-name">Appearance</div>
+					<div class="section-desc">Change the look and feel of Courses<strong>Plus</strong>.</div>
 				</li>
 				<li data-page="features">
 					<div class="section-name">Features</div>
