Started to implement themes, See Below
Lab ended when I was half way through.

--- a/etc/options.html
+++ b/etc/options.html
@@ -140,6 +140,11 @@
 
 		<section id="left-pane">
 			<ul id="pagelist">
+				<li data-page="theme">
+					<div class="section-name">Theme</div>
+					<div class="section-desc">Quickly change the look of Courses<strong>Plus</strong></div>
+				</li>
+
 				<li data-page="page-options">
 					<div class="section-name">Appearance</div>
 					<div class="section-desc">Change the look and feel of Courses<strong>Plus</strong>.</div>
@@ -168,6 +173,8 @@
 					<div class="section-name">About</div>
 					<div class="section-desc">About the version of Courses<strong>Plus</strong> you have installed.</div>
 				</li>
+
+
 			</ul>
 		</section>
 
@@ -292,13 +299,13 @@
 				<p>Your unique ID is: <strong id="coursesplus-uniqueid">Loading...</strong></p>
 			</section>
 			<section id="about" class="page">
-				<h3>Courses+</h3>
+				<h3>Courses<strong>Plus</strong></h3>
 				<h4>version <span class="currentVersion"></span></h4>
 
 				<h2>Open-source software</h2>
-				<p>Courses+ is open source software licensed under the <a href="https://gitlab.com/CoursesPlus/CoursesPlus/blob/master/LICENSE.txt">MIT License</a>.
+				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="https://gitlab.com/CoursesPlus/CoursesPlus/blob/master/LICENSE.txt">MIT License</a>.
 
-				<p>Courses+ also makes use of the following open-source projects:</p>
+				<p>Courses<strong>Plus</strong> also makes use of the following open-source projects:</p>
 				<ul>
 					<li><a href="https://jquery.com/">jQuery</a></li>
 					<li><a href="https://jqueryui.com/">jQuery UI</a></li>
@@ -311,6 +318,24 @@
 				<p>Courses has a profile settings page. Press the below button to access it.</p><br>
 				<a href="https://courses2015.dalton.org/user/edit.php?id=1194&course=1" class="btn btn-primary">Dalton Courses External Settings. (This will leave the current page.)</a>
 
+			</section>
+			<section id="theme" class="page">
+			<label class="col-lg-2 control-label">Radios</label>
+			      <div class="col-lg-10">
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="optionsRadios1" value="bootstrap" checked="">
+			            Default
+			          </label>
+			        </div>
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="optionsRadios2" value="cerulean">
+			           Cerulean
+			          </label>
+			        </div>
+			      </div>
+				</ul>
 			</section>
 		</section>
 	</body>
