Finished themes, and changed LICENSE to raw.

--- a/etc/options.html
+++ b/etc/options.html
@@ -303,7 +303,7 @@
 				<h4>version <span class="currentVersion"></span></h4>
 
 				<h2>Open-source software</h2>
-				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="https://gitlab.com/CoursesPlus/CoursesPlus/blob/master/LICENSE.txt">MIT License</a>.
+				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="https://gitlab.com/CoursesPlus/CoursesPlus/raw/master/LICENSE.txt">MIT License</a>.
 
 				<p>Courses<strong>Plus</strong> also makes use of the following open-source projects:</p>
 				<ul>
@@ -320,18 +320,72 @@
 
 			</section>
 			<section id="theme" class="page">
-			<label class="col-lg-2 control-label">Radios</label>
+			<label class="col-lg-2 control-label">Themes</label>
 			      <div class="col-lg-10">
 			        <div class="radio">
 			          <label>
-			            <input type="radio" name="optionsRadios" id="optionsRadios1" value="bootstrap" checked="">
-			            Default
+			            <input type="radio" name="optionsRadios" id="theme1" value="bootstrap" checked="">
+			            Default <strong>(Customisible)</strong>
 			          </label>
 			        </div>
 			        <div class="radio">
 			          <label>
-			            <input type="radio" name="optionsRadios" id="optionsRadios2" value="cerulean">
+			            <input type="radio" name="optionsRadios" id="theme2" value="cerulean">
 			           Cerulean
+			          </label>
+			        </div>
+			      	<div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme3" value="cosmo">
+			           Cosmo
+			          </label>
+			        </div>
+			      	<div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme4" value="flatly">
+			           Flatly
+			          </label>
+			        </div>
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme5" value="lumen">
+			           Lumen
+			          </label>
+			        </div>
+			         <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme6" value="paper">
+			           Paper
+			          </label>
+			        </div>
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme7" value="sandstone">
+			           Sandstone
+			          </label>
+			        </div>
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme8" value="simplex">
+			           Simplex
+			          </label>
+			        </div>
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme9" value="spacelab">
+			           Spacelab
+			          </label>
+			        </div>
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="theme10" value="united">
+			           United
+			          </label>
+			        </div>
+			        <div class="radio">
+			          <label>
+			            <input type="radio" name="optionsRadios" id="optionsRadios2" value="yeti">
+			           Yeti
 			          </label>
 			        </div>
 			      </div>
