Added Editor's Choice themes.

--- a/etc/options.html
+++ b/etc/options.html
@@ -355,7 +355,7 @@
 			         <div class="radio">
 			          <label>
 			            <input type="radio" name="optionsRadios" id="theme6" value="paper">
-			           Paper
+			           Paper <em>Editor's Choice!</em>
 			          </label>
 			        </div>
 			        <div class="radio">
@@ -385,7 +385,7 @@
 			        <div class="radio">
 			          <label>
 			            <input type="radio" name="optionsRadios" id="optionsRadios2" value="yeti">
-			           Yeti
+			           Yeti <em>Editor's Choice!</em>
 			          </label>
 			        </div>
 			      </div>
