Moved "Go to Courses" and removed profile settings
Removed profile settings because they would only work if you were
signed in as William Barkoff. Anyone else would get a "no permissions"
error message.

--- a/etc/options.html
+++ b/etc/options.html
@@ -135,7 +135,7 @@
 		</style>
 
 		<header>
-			<h2 class="pull-left">Options <span>Courses<strong>Plus</strong></span></h1> <div class="pull-right"><a href="https://courses.dalton.org">Go to Courses &raquo;</a></div><br>
+			<h2 class="pull-left">Options <span>Courses<strong>Plus</strong></span></h1>
 		</header>
 
 		<section id="left-pane">
@@ -144,7 +144,6 @@
 					<div class="section-name">Theme</div>
 					<div class="section-desc">Quickly change the look of Courses<strong>Plus</strong></div>
 				</li>
-
 				<li data-page="page-options">
 					<div class="section-name">Appearance</div>
 					<div class="section-desc">Change the look and feel of Courses<strong>Plus</strong>.</div>
@@ -165,16 +164,17 @@
 					<div class="section-name">Privacy</div>
 					<div class="section-desc">Manage Courses<strong>Plus</strong>'s anonymous analytics</div>
 				</li>
-				<li data-page="profile">
-					<div class="section-name">Profile Settings</div>
-					<div class="section-desc">Manage Courses's profile settings.</div>
-				</li>
 				<li data-page="about">
 					<div class="section-name">About</div>
 					<div class="section-desc">About the version of Courses<strong>Plus</strong> you have installed.</div>
 				</li>
 
-
+				<!--<li data-page="external:https://courses.dalton.org/user/edit.php?id=1194&course=1">
+					<div class="section-name">Courses Profile Settings &raquo;</div>
+				</li>-->
+				<li data-page="external:https://courses.dalton.org">
+ 					<div class="section-name">Go to Courses &raquo;</div>
+ 				</li>
 			</ul>
 		</section>
 
@@ -313,11 +313,6 @@
 					<li><a href="https://github.com/snaptortoise/konami-js">Konami.js</a></li>
 					<li><a href="http://bootswatch.com">Bootswatch</a></li>
 				</ul>
-			</section>
-			<section id="profile" class="page">
-				<p>Courses has a profile settings page. Press the below button to access it.</p><br>
-				<a href="https://courses2015.dalton.org/user/edit.php?id=1194&course=1" class="btn btn-primary">Dalton Courses External Settings. (This will leave the current page.)</a>
-
 			</section>
 			<section id="theme" class="page">
 			<label class="col-lg-2 control-label">Themes</label>
