Schedule login fixes

--- a/etc/options.html
+++ b/etc/options.html
@@ -44,6 +44,23 @@
 			</div><!-- /.modal-dialog -->
 		</div>
 
+		<div id="serviceOptionsModal" class="modal fade">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title">Options</h4>
+					</div>
+					<div class="modal-body">
+						
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Done</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div>
+
 		<style>
 		body {
 			margin-top: 0;
