Add service wrench icon

--- a/etc/options.html
+++ b/etc/options.html
@@ -327,6 +327,7 @@
 					<li><a href="https://jquery.com/">jQuery</a></li>
 					<li><a href="https://jqueryui.com/">jQuery UI</a></li>
 					<li><a href="http://getbootstrap.com/">Twitter Bootstrap</a></li>
+					<li><a href="https://fortawesome.github.io/Font-Awesome/">Font Awesome</a></li>
 					<li><a href="https://github.com/snaptortoise/konami-js">Konami.js</a></li>
 					<li><a href="http://bootswatch.com">Bootswatch</a></li>
 				</ul>
