Make author verification *slightly* more secure

--- a/etc/options.html
+++ b/etc/options.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>CoursesPlus Options</title>
 
+		<link rel="stylesheet" href="../css/font-awesome.min.css" />
 		<link rel="stylesheet" href="../css/simplegrid.css" />
 		<link rel="stylesheet" href="../scss_gen/fonts.css" />
 		<link rel="stylesheet" href="options.css" />
