--- a/etc/options.html
+++ b/etc/options.html
@@ -153,7 +153,7 @@
 		</style>
 
 		<header>
-			<h2 class="pull-left">Options <span>Courses<strong>Plus</strong></span></h1>
+			<h2 class="pull-left"><i class="fa fa-wrench"></i> Options</h1>
 		</header>
 
 		<section id="left-pane">
