Prepare for themes

--- a/etc/options.html
+++ b/etc/options.html
@@ -139,6 +139,7 @@
 
 		.page {
 			display: none;
+			padding-left: 3px;
 		}
 		.page.current {
 			display: block;
@@ -204,6 +205,75 @@
 				<p>Your changes are automatically saved.</p>
 				<br />
 				<h3>To begin, select a category on the left.</h3>
+			</section>
+			<section id="theme" class="page">
+				<p>Themes are groups of pre-made settings you can apply to Courses. They change things like buttons, navigation bars, and other elements.</p>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="bootstrap" checked="checked">
+						Default <strong>(Customisible)</strong>
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="cerulean">
+						Cerulean
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="cosmo">
+						Cosmo
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="flatly">
+						Flatly
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="lumen">
+						Lumen
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="paper">
+						Paper <em>Editor's Choice!</em>
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="sandstone">
+						Sandstone
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="simplex">
+						Simplex
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="spacelab">
+						Spacelab
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="united">
+						United
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="optionsRadios" value="yeti">
+						Yeti <em>Editor's Choice!</em>
+					</label>
+				</div>
 			</section>
 			<section id="page-options" class="page">
 				<h6>Background</h6>
@@ -331,78 +401,6 @@
 					<li><a href="https://fortawesome.github.io/Font-Awesome/">Font Awesome</a></li>
 					<li><a href="https://github.com/snaptortoise/konami-js">Konami.js</a></li>
 					<li><a href="http://bootswatch.com">Bootswatch</a></li>
-				</ul>
-			</section>
-			<section id="theme" class="page">
-			<label class="col-lg-2 control-label">Themes</label>
-			      <div class="col-lg-10">
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme1" value="bootstrap" checked="">
-			            Default <strong>(Customisible)</strong>
-			          </label>
-			        </div>
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme2" value="cerulean">
-			           Cerulean
-			          </label>
-			        </div>
-			      	<div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme3" value="cosmo">
-			           Cosmo
-			          </label>
-			        </div>
-			      	<div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme4" value="flatly">
-			           Flatly
-			          </label>
-			        </div>
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme5" value="lumen">
-			           Lumen
-			          </label>
-			        </div>
-			         <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme6" value="paper">
-			           Paper <em>Editor's Choice!</em>
-			          </label>
-			        </div>
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme7" value="sandstone">
-			           Sandstone
-			          </label>
-			        </div>
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme8" value="simplex">
-			           Simplex
-			          </label>
-			        </div>
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme9" value="spacelab">
-			           Spacelab
-			          </label>
-			        </div>
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="theme10" value="united">
-			           United
-			          </label>
-			        </div>
-			        <div class="radio">
-			          <label>
-			            <input type="radio" name="optionsRadios" id="optionsRadios2" value="yeti">
-			           Yeti <em>Editor's Choice!</em>
-			          </label>
-			        </div>
-			      </div>
 				</ul>
 			</section>
 		</section>
