--- a/etc/options.html
+++ b/etc/options.html
@@ -211,7 +211,7 @@
 				<div class="radio">
 					<label>
 						<input type="radio" name="optionsRadios" value="bootstrap" checked="checked">
-						Default <strong>(Customisible)</strong>
+						Default <strong>(customizable)</strong>
 					</label>
 				</div>
 				<div class="radio">
