Add beginning theme support

--- a/etc/options.html
+++ b/etc/options.html
@@ -210,67 +210,67 @@
 				<p>Themes are groups of pre-made settings you can apply to Courses. They change things like buttons, navigation bars, and other elements.</p>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="bootstrap" checked="checked">
+						<input type="radio" name="themeRadios" value="bootstrap" checked="checked">
 						Default <strong>(customizable)</strong>
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="cerulean">
+						<input type="radio" name="themeRadios" value="cerulean">
 						Cerulean
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="cosmo">
+						<input type="radio" name="themeRadios" value="cosmo">
 						Cosmo
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="flatly">
+						<input type="radio" name="themeRadios" value="flatly">
 						Flatly
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="lumen">
+						<input type="radio" name="themeRadios" value="lumen">
 						Lumen
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="paper">
+						<input type="radio" name="themeRadios" value="paper">
 						Paper <em>Editor's Choice!</em>
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="sandstone">
+						<input type="radio" name="themeRadios" value="sandstone">
 						Sandstone
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="simplex">
+						<input type="radio" name="themeRadios" value="simplex">
 						Simplex
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="spacelab">
+						<input type="radio" name="themeRadios" value="spacelab">
 						Spacelab
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="united">
+						<input type="radio" name="themeRadios" value="united">
 						United
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="optionsRadios" value="yeti">
+						<input type="radio" name="themeRadios" value="yeti">
 						Yeti <em>Editor's Choice!</em>
 					</label>
 				</div>
