Add beta tag to themes

--- a/etc/options.html
+++ b/etc/options.html
@@ -160,7 +160,7 @@
 		<section id="left-pane">
 			<ul id="pagelist">
 				<li data-page="theme">
-					<div class="section-name">Theme</div>
+					<div class="section-name">Themes <sup>beta</sup></div>
 					<div class="section-desc">Quickly change the look of Courses<strong>Plus</strong></div>
 				</li>
 				<li data-page="page-options">
@@ -208,6 +208,7 @@
 			</section>
 			<section id="theme" class="page">
 				<p>Themes are groups of pre-made settings you can apply to Courses. They change things like buttons, navigation bars, and other elements.</p>
+				<p>Themes is a beta feature and still under development. There may be glitches or other errors. If you find one, please email emails@coursesplus.tk!</p>
 				<div class="radio">
 					<label>
 						<input type="radio" name="themeRadios" value="bootstrap" checked="checked">
