Add "theme default" options for color choices

--- a/etc/options.html
+++ b/etc/options.html
@@ -323,7 +323,8 @@
 					<h6>Regular Color</h6>
 					<input type="color" id="secretTextColorPicker" value="#8e908f" />
 					<div id="textColors">
-						<div class="selBox textColor black selected" data-selBoxGroup="textColor" data-selBoxVal="black"></div>
+						<div class="selBox textColor themeDefault selected" data-selBoxGroup="textColor" data-selBoxVal="themeDefault"></div>
+						<div class="selBox textColor black" data-selBoxGroup="textColor" data-selBoxVal="black"></div>
 						<div class="selBox textColor gray" data-selBoxGroup="textColor" data-selBoxVal="gray"></div>
 						<div class="selBox textColor white" data-selBoxGroup="textColor" data-selBoxVal="white"></div>
 						<div class="selBox textColor custom" data-selBoxGroup="textColor" data-selBoxVal="custom"><span>...</span></div>
@@ -331,7 +332,8 @@
 					<h6>Link Color</h6>
 					<input type="color" id="secretLinkTextColorPicker" value="#8e908f" />
 					<div id="linkTextColors">
-						<div class="selBox linkTextColor bluish selected" data-selBoxGroup="linkTextColor" data-selBoxVal="#428BCA"></div>
+						<div class="selBox linkTextColor themeDefault selected" data-selBoxGroup="linkTextColor" data-selBoxVal="themeDefault"></div>
+						<div class="selBox linkTextColor bluish" data-selBoxGroup="linkTextColor" data-selBoxVal="#428BCA"></div>
 						<div class="selBox linkTextColor blue" data-selBoxGroup="linkTextColor" data-selBoxVal="blue"></div>
 						<div class="selBox linkTextColor black" data-selBoxGroup="linkTextColor" data-selBoxVal="black"></div>
 						<div class="selBox linkTextColor lightblue" data-selBoxGroup="linkTextColor" data-selBoxVal="lightblue"></div>
@@ -345,7 +347,8 @@
 					<h6>Text Color</h6>
 					<input type="color" id="secretNavTextColorPicker" value="#8e908f" />
 					<div id="navTextColors">
-						<div class="selBox navTextColor black selected" data-selBoxGroup="navTextColor" data-selBoxVal="black"></div>
+						<div class="selBox navTextColor themeDefault selected" data-selBoxGroup="navTextColor" data-selBoxVal="themeDefault"></div>
+						<div class="selBox navTextColor black" data-selBoxGroup="navTextColor" data-selBoxVal="black"></div>
 						<div class="selBox navTextColor blue" data-selBoxGroup="navTextColor" data-selBoxVal="blue"></div>
 						<div class="selBox navTextColor lightblue" data-selBoxGroup="navTextColor" data-selBoxVal="lightblue"></div>
 						<div class="selBox navTextColor gray" data-selBoxGroup="navTextColor" data-selBoxVal="gray"></div>
