More logo preparation

--- a/etc/options.html
+++ b/etc/options.html
@@ -15,6 +15,7 @@
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../js/components.js"></script>
 		<script type="text/javascript" src="../js/services.js"></script>
+		<script type="text/javascript" src="../js/logos.js"></script>
 		<script type="text/javascript" src="../js/options.js"></script>
 	</head>
 	<body>
@@ -30,11 +31,6 @@
 						<p>Your changes are automatically saved.</p>
 						<p>Thanks to c20wb for the "CoursesPlus" and "DaltonCourses" logos.</p>
 						<div id="logoSelGallery">
-							<div class="selBox logo regular selected" data-selBoxGroup="logo" data-selBoxVal="regular"></div>
-							<div class="selBox logo circle" data-selBoxGroup="logo" data-selBoxVal="circle"></div>
-							<div class="selBox logo coursesbigwordmark" data-selBoxGroup="logo" data-selBoxVal="coursesbigwordmark"></div>
-							<div class="selBox logo coursespluswordmark" data-selBoxGroup="logo" data-selBoxVal="coursespluswordmark"></div>
-							<div class="selBox logo daltoncourseswordmark" data-selBoxGroup="logo" data-selBoxVal="daltoncourseswordmark"></div>
 						</div>
 					</div>
 					<div class="modal-footer">
