--- a/etc/options.html
+++ b/etc/options.html
@@ -15,6 +15,7 @@
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../js/components.js"></script>
 		<script type="text/javascript" src="../js/services.js"></script>
+		<script type="text/javascript" src="../js/themes.js"></script>
 		<script type="text/javascript" src="../js/logos.js"></script>
 		<script type="text/javascript" src="../js/options.js"></script>
 	</head>
@@ -205,72 +206,7 @@
 			<section id="theme" class="page">
 				<p>Themes are groups of pre-made settings you can apply to Courses. They change things like buttons, navigation bars, and other elements.</p>
 				<p>Themes is a beta feature and still under development. There may be glitches or other errors. If you find one, please email emails@coursesplus.tk!</p>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="bootstrap" checked="checked">
-						Default <strong>(customizable)</strong>
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="cerulean">
-						Cerulean
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="cosmo">
-						Cosmo
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="flatly">
-						Flatly
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="lumen">
-						Lumen
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="paper">
-						Paper <em>Editor's Choice!</em>
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="sandstone">
-						Sandstone
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="simplex">
-						Simplex
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="spacelab">
-						Spacelab
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="united">
-						United
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="themeRadios" value="yeti">
-						Yeti <em>Editor's Choice!</em>
-					</label>
-				</div>
+				
 			</section>
 			<section id="page-options" class="page">
 				<h6>Background</h6>
