Added User Settings
(This time for users **without** my student ID)

--- a/etc/options.html
+++ b/etc/options.html
@@ -191,6 +191,9 @@
 				<li data-page="external:https://courses.dalton.org">
  					<div class="section-name">Go to Courses &raquo;</div>
  				</li>
+ 				<li data-page="external:https://courses2015.dalton.org/user/edit.php?">
+ 					<div class="section-name">Go to User Settings &raquo;</div>
+ 				</li>
 			</ul>
 		</section>
 
