--- a/etc/options.html
+++ b/etc/options.html
@@ -62,7 +62,7 @@
 		<style>
 		body {
 			margin-top: 0;
-			overflow: none;
+			overflow: hidden;
 		}
 		header {
 			background: white;
@@ -94,7 +94,7 @@
 
 		#left-pane {
 			position: fixed;
-			top: 70px;
+			top: 0;
 			left: 0;
 
 			background: white;
@@ -102,18 +102,18 @@
 			box-shadow: 1px 1px 1px black;
 			cursor: pointer;
 			width: 300px;
-			height: 90%;
+			height: 100%;
 			z-index: 998;
 
-			padding-top: 0;
-			padding-bottom: 70px;
-
-			overflow: scroll;
+			padding-top: 70px;
 		}
 
 		#left-pane > ul {
+            display: block;
 			list-style-type: none;
+            height: 100%;
 			padding-left: 0px;
+			overflow-y: scroll;
 		}
 
 		#left-pane > ul > li {
@@ -151,7 +151,7 @@
 		</style>
 
 		<header>
-			<h2 class="pull-left"><i class="fa fa-wrench"></i> Options</h1>
+			<h2 class="pull-left"><i class="fa fa-wrench"></i> Options</h2>
 		</header>
 
 		<section id="left-pane">
