--- a/etc/options.html
+++ b/etc/options.html
@@ -60,9 +60,11 @@
 		</div>
 
 		<style>
-		body {
+		html, body {
 			margin-top: 0;
 			overflow: hidden;
+            width: 100%;
+            height: 100%;
 		}
 		header {
 			background: white;
@@ -136,17 +138,22 @@
 
 		.page {
 			display: none;
+			padding-top: 10px;
 			padding-left: 3px;
+			overflow-x: hidden;
+			overflow-y: scroll;
+            width: 100%;
+            height: 100%;
 		}
 		.page.current {
 			display: block;
 		}
 
 		#page-container {
-			height: 90%;
-			width: 75%;
-			margin-left: 300px;
-			overflow: scroll;
+			height: 100%;
+			width: 100%;
+			padding-left: 300px;
+            padding-right: 10px;
 		}
 		</style>
 
