You can't refresh a browser action.

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -12,6 +12,12 @@
 		<script src="../js/jquery.history.js"></script>
 		<script src="../js/coursesLib.js"></script>
 		<script src="../js/hamburger.js"></script>
+
+		<style>
+			#page-content {
+				padding-top: 20px;
+			}
+		</style>
 	</head>
 	<body style="overflow-x:hidden;">
 		<noscript>Please enable JavaScript. You can do this in Content Settings.</noscript>
@@ -21,7 +27,7 @@
 			</div>
 			<div id="notLoggedInPage" class="page">
 				<h1>You're not logged in!</h1>
-				<h4><strong>Log in on regular Courses and refresh the page to continue.</strong> There will be a sign in page here (eventually)</h4>
+				<h4>Log in on regular Courses and come back here.</h4>
 			</div>
 			<div id="mainPage" class="page">
 				<div class="grid grid-pad">
