Tried to make browser action remove button. Failed.

--- a/etc/disablemenu.html
+++ b/etc/disablemenu.html
@@ -13,6 +13,9 @@
 				padding-bottom: 10px;
 			}
 		</style>
+
+		<script src="../js/jquery.js"></script>
+		<script src="disablemenu.js"></script>
 	</head>
 	<body>
 		<h1>Disable the Menubar Icon</h1>
