Closed various tags

--- a/etc/disablemenu.html
+++ b/etc/disablemenu.html
@@ -20,8 +20,10 @@
 	<body>
 		<h1>Disable the Menubar Icon</h1>
 		<h3>Please follow the below instructions to disable the icon in the menu bar.</h3>
-		<br>
-		<h5>Do you see the Dalton logo in the menu bar? (It looks like this: <img src="../images/logos/circle.png" height="19" width="19">)<h5> If you are on a Mac <strong>Hold control and click it</strong>. If you are on Windows, <strong>right click it.</strong>. Next clck "Hide Button." <br><br> To re enable it, please click the three lines menu, then click "More Tools," and Extensions. Scroll down to CoursesPlus, and click "Show Button" (Next to allow in incognito).
- 		</div>
+		<br />
+		<h5>
+			Do you see the Dalton logo in the menu bar? (It looks like this: <img src="../images/logos/circle.png" height="19" width="19" />)
+			If you are on a Mac <strong>Hold control and click it</strong>. If you are on Windows, <strong>right click it.</strong>. Next clck "Hide Button." <br><br> To re enable it, please click the three lines menu, then click "More Tools," and Extensions. Scroll down to CoursesPlus, and click "Show Button" (Next to allow in incognito).
+		</h5>
 	</body>
 </html>
