Make an ordered list and the font bigger

--- a/etc/disablemenu.html
+++ b/etc/disablemenu.html
@@ -8,6 +8,7 @@
 		<style>
 			body {
 				font-family: Oxygen, Helvetica, Arial, sans-serif !important;
+				font-size: 16px;
 				margin-left: 10px;
 				margin-right: 10px;
 				padding-bottom: 10px;
@@ -18,12 +19,19 @@
 		<script src="disablemenu.js"></script>
 	</head>
 	<body>
-		<h1>Disable the Menubar Icon</h1>
+		<h1>Disable the Menu bar Icon</h1>
 		<h3>Please follow the below instructions to disable the icon in the menu bar.</h3>
-		<br />
-		<h5>
-			Do you see the Dalton logo in the menu bar? (It looks like this: <img src="../images/logos/circle.png" height="19" width="19" />)
-			If you are on a Mac <strong>Hold control and click it</strong>. If you are on Windows, <strong>right click it.</strong>. Next clck "Hide Button." <br><br> To re enable it, please click the three lines menu, then click "More Tools," and Extensions. Scroll down to CoursesPlus, and click "Show Button" (Next to allow in incognito).
-		</h5>
+		<ol>
+			<li>Find the Dalton logo in the menu bar. (It looks like this: <img src="../images/logos/circle.png" height="19" width="19" />)</li>
+			<li>If you are on a Mac, <strong>hold control and click it</strong>.</li>
+			<li>If you are on Windows, <strong>right-click it.</strong>.</li>
+			<li>Click "Hide button".</li>
+		</ol>
+		To re-enable the button:
+		<ol>
+			<li>Click the three lines ("hamburger") menu in the top right.</li>
+			<li>Select "More Tools" and click on "Extensions".</li>
+			<li>Scroll down to CoursesPlus, and click "Show Button" (right next to "Allow in incognito").</li>
+		</ol>
 	</body>
 </html>
