Even more server changes!

--- a/etc/options.html
+++ b/etc/options.html
@@ -340,7 +340,7 @@
 				<h4>version <span class="currentVersion"></span></h4>
 
 				<h2>Open-source software</h2>
-				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="https://gitlab.com/CoursesPlus/CoursesPlus/raw/master/LICENSE.txt">MIT License</a>.
+				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="https://github.com/CoursesPlus/CoursesPlus/raw/master/LICENSE.txt">MIT License</a>.
 
 				<p>Courses<strong>Plus</strong> also makes use of the following open-source projects:</p>
 				<ul>
