Added fa-smile and fa-frown to Yes and No buttons.

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -38,9 +38,9 @@
 			<div id="welcomePage" class="page">
 				<h1>Welcome</h1>
 				<h4>Your upcoming events on Courses go up here.</h4>
-				<button id="soundsGood" class="btn btn-default btn-lg">Sounds good</button>
+				<button id="soundsGood" class="btn btn-default btn-lg">Sounds good <i class="fa fa-smile-o"></i></button>
 				<br />
-				<button id="noThanks" class="btn btn-info">No thanks</button>
+				<button id="noThanks" class="btn btn-info">No thanks <i class="fa fa-frown-o"></i></button>
 			</div>
 			<div id="mainPage" class="page">
 				<div class="content">
