Added a FA icon to "Upcoming Events"

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -44,7 +44,7 @@
 			</div>
 			<div id="mainPage" class="page">
 				<div class="content">
-					<h3>Upcoming events</h3>
+					<h3><i class="fa fa-clock-o"></i> Upcoming events</h3>
 					<ul id="upcomingEventList">
 					</ul>
 				</div>
