--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -48,10 +48,10 @@
 					<ul id="upcomingEventList">
 					</ul>
 					<h5><ul>
-						<li><a href="https://courses.dalton.org/"><i class="fa fa-external-link"></i>&nbsp&nbsp&nbsp&nbspGo to Courses</a>
-						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o"></i>&nbsp&nbsp&nbsp&nbspUpcoming Events</a></li>
-						<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear"></i>&nbsp&nbsp&nbsp&nbspCourses<strong>Plus</strong> Options</a></li>
-						<li><p><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban"></i>&nbsp&nbsp&nbsp&nbspDisable this pop up</p></a>
+						<li><a href="https://courses.dalton.org/"><i class="fa fa-external-link"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a>
+						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
+						<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
+						<li><p><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a>
 				</div>
 			</div>
 		</div>
