--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -26,7 +26,7 @@
 		</style>
 	</head>
 	<body>
-		<noscript>Please enable JavaScript. You can do this in Content Settings.</noscript>
+		<noscript>Please enable JavaScript. You can do this in <a href="chrome://settings/content" target="_blank"></a> Content Settings.</noscript>
 		<div id="page-content">
 			<div id="loadingPage" class="page showing">
 				<i class="fa fa-4x fa-circle-o-notch fa-spin"></i>
