Fixed target for "Go to Courses" QuickLink

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -47,8 +47,8 @@
 					<h3><i class="fa fa-clock-o"></i> Upcoming events</h3>
 					<ul id="upcomingEventList">
 					</ul>
-						<li><a href="https://courses.dalton.org/"><i class="fa fa-external-link"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a>
 					<ul>
+						<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
 						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
 						<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
 						<li><p><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a>
