--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -51,8 +51,8 @@
 						<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
 						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
 						<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
-						<li><p><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a>
 						<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o"></i>&nbsp;&nbsp;&nbsp;&nbsp;gDocs</a></li>
+						<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a></li>
 					</ul>
 				</div>
 			</div>
