Added services to menubar

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -47,6 +47,18 @@
 					<h3><i class="fa fa-clock-o"></i> Upcoming events</h3>
 					<ul id="upcomingEventList">
 					</ul>
+					<br>
+					<h3><i class="fa fa-globe"></i> Services</h3>
+					<ul>
+						<li>Someone who is good at javascript will put some services here and get rid of this annoying message.</li>
+						<li><h3>TODO:</h3></li>
+						<li>Lunch Menu</li>
+						<li>Schedule</li>
+						<li>Wolfram|Aplha</li>
+						<li>Weather</li>
+					</ul>
+					<br>
+					<h3><i class="fa fa-link"></i> Quick<strong>Links</strong></h3>
 					<ul>
 						<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
 						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
