--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -60,11 +60,11 @@
 					<br>
 					<h3><i class="fa fa-link"></i> Quick<strong>Links</strong></h3>
 					<ul>
-						<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
-						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
-						<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
-						<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o"></i>&nbsp;&nbsp;&nbsp;&nbsp;gDocs</a></li>
-						<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a></li>
+						<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
+						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
+						<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
+						<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;gDocs</a></li>
+						<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a></li>
 					</ul>
 				</div>
 			</div>
